--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/panier/modulesUsed/panier.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/panier/modulesUsed/panier.html.twig
@@ -1,3 +1,4 @@
+{#
 <div class="well">
     <ul class="nav nav-list">
         <li class="nav-header">Panier</li>
@@ -13,4 +14,4 @@
             </a>
         </li>
     </ul>
-</div>
+</div>#}
