--- a/web/css/accueil.css
+++ b/web/css/accueil.css
@@ -1,4 +1,10 @@
 .container-fluid{
+    width:100%;
+    height:1000px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    background-color: white;
     padding: 0;
     margin: 0;
 }
