--- a/app/Resources/views/layout/layoutAdmin.html.twig
+++ b/app/Resources/views/layout/layoutAdmin.html.twig
@@ -58,7 +58,7 @@
 
 
         <script src="{{ asset('js/jquery-1.10.0.min.js') }}"></script>
-        <script src="{{ asset('../js/bootstrap.js') }}"></script>
+        <script src="{{ asset('js/bootstrap.js') }}"></script>
         <script src="{{ asset('ckeditor/ckeditor.js') }}"></script>
 
         <hr />
@@ -75,10 +75,10 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/js/bootstrap-select.min.js"></script>
         <script src="{{ asset('js/jquery-1.10.0.min.js') }}"></script>
-        <script src="{{ asset('../js/bootstrap.js') }}"></script>
+        <script src="{{ asset('js/bootstrap.js') }}"></script>
         <script src="{{ asset('ckeditor/ckeditor.js') }}"></script>
 
-
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.min.js"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
