--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -27,15 +27,14 @@
      {% block body %}{% endblock %}
 
         <hr />
-        <script src="{{ asset('js/jquery-1.10.0.min.js') }}"></script>
-        <script src="{{ asset('../js/bootstrap.js') }}"></script>
+     <script src="{{ asset('js/jquery.min.js') }}"></script>
+     <script src="{{ asset('js/jquery-1.10.0.min.js') }}"></script>
+     {#<script src="{{ asset('js/bootstrap.js') }}"></script>#}
+     <script src="{{ asset('js/multiple-select.js') }}"></script>
 
-        <script src="{{ asset('js/multiple-select.js') }}"></script>
-        <script src="{{ asset('js/jquery.min.js') }}"></script>
 
-
-      {#  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>#}
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/js/bootstrap-select.min.js"></script>
 
 
