update origin master

--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -417,11 +417,11 @@
                             <img class="icone" src="https://image.noelshack.com/fichiers/2018/08/5/1519379743-icone-3.png" alt="icone-3">
                             Référencement   <span class="glyphicon glyphicon-triangle-right fleche-petit"></span>
                         </a>
-<<<<<<< HEAD
+
                         <a href="{{ path('devis_gestion_contenu') }}" role="button" class="btn btn-info">
-=======
-                        <a href="{{ path('produitsdevis') }}" role="button" class="btn btn-info">
->>>>>>> 1238199c9c0f4a5cd0e77896ddd0e9037b1d2f10
+
+                        {#<a href="{{ path('produitsdevis') }}" role="button" class="btn btn-info">#}
+
                             <img class="icone" src="https://image.noelshack.com/fichiers/2018/08/5/1519379743-icona-2.png" alt="icone-3">
                             Gestion de Contenu   <span class="glyphicon glyphicon-triangle-right"></span>
                         </a>
