--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencementdevis.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencementdevis.html.twig
@@ -199,6 +199,7 @@
  <button type="button" name="test" id="ajax_test">Test</button>
 
     </form>
+    <a type="button" name="test" id="ajax_test" target="_blank" href="{{ path('referencement_commande_getting') }}">getting</a>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://code.jquery.com/jquery.js"></script>
 
